# tracelogger

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yaml
src/tracelogger/: __init__.py  tracelogger.py
tests/: test_tracelogger.py
