[tool.poetry]
name = "tracelogger"
version = "0.1.0"
description = ""
authors = ["Laszlo Sragner <sragner@gmail.com>"]
readme = "README.md"
packages = [{include = "tracelogger", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
